
= rufus-tokyo CHANGELOG.txt


== rufus-tokyo - 0.1.7    released 2009/02/19

- todo  : implemented #delete_keys_with_prefix (naive impl for tables)
- added : lget/ldelete and merge! to Rufus::Tokyo::Cabinet and ::Tyrant
- todo  : Rufus::Tokyo::Cabinet.new('filename', :type => :hash) now OK (Zev)
- todo  : more documentation for Rufus::Tokyo::Cabinet#new
- added : Rufus::Tokyo::Cabinet has a open method that takes a block like
          File.open (Zev)
- todo  : aligned Rufus::Tokyo::Table#new on ::Cabinet#new
- todo  : added opts (:prefix, :limit, :native) to Rufus::Tokyo::Cabinet#keys,
          Rufus::Tokyo::Table#keys and the corresponding Tyrant classes


== rufus-tokyo - 0.1.6    released 2009/02/16

- todo : Tyrant and TyrantTable now complain when used in lieu of each other
- todo : implemented Tyrant and TyrantTable #stat
- todo : made tran begin/abort/commit directly available (framework builders)
- todo : implemented Rufus::Tokyo::Table#transaction
- bug  : JRuby support back in
- todo : implemented Rufus::Tokyo::Map#[] (class method)
- todo : simplified Table and TyrantTable #[]=
- bug  : preventing table#[]= from segfaulting on bad input (Justin)


== rufus-tokyo - 0.1.5    released 2009/02/13

- todo : implemented set_index (cabinet / tyrant tables)
- todo : namespace simplification (Justin)
- todo : implemented Rufus::Tokyo::TyrantTable
- todo : implemented Rufus::Tokyo::Tyrant
- todo : moved tests to bacon (spec/)


== rufus-tokyo - 0.1.4    released 2009/02/02

- todo #23780 : hmethods for Rufus::Tokyo::Table


== rufus-tokyo - 0.1.3    released 2009/01/29

- todo : implemented Rufus::Tokyo::Table (and query)
- todo : implemented Rufus::Tokyo::List
- todo : implemented Rufus::Tokyo::Map
- todo : implemented Cabinet#compact_copy
- todo : implemented Cabinet#copy


== rufus-tokyo - 0.1.2    released 2009/01/23

- todo : implemented Cabinet#keys and #values


== rufus-tokyo - 0.1.1    released 2009/01/23
