@@ -28,21 +28,11 @@
 # jmettraux@gmail.com
 #
 
-require 'ffi' # sudo gem install ffi
-
 
 module Rufus
-module Tokyo
-
-  VERSION = '0.1.7'
-
-  #
-  # A common error class
-  #
-  class TokyoError < RuntimeError; end
-
+module Edo
 end
 end
 
-require 'rufus/tokyo/cabinet'
+require 'rufus/edo/cabinet'
 
