@@ -1,0 +1,4 @@
+
+require 'rufus/edo/cabinet/abstract'
+#require 'rufus/edo/cabinet/table'
+
