@@ -1,6 +1,6 @@
 
 require 'rufus/tokyo/cabinet/lib'
 require 'rufus/tokyo/cabinet/util'
-require 'rufus/tokyo/cabinet/table'
 require 'rufus/tokyo/cabinet/abstract'
+require 'rufus/tokyo/cabinet/table'
 
